--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Uber</string>
+    <string name="title_activity_current_location">Map</string>
+    <string name="title_activity_route">Map</string>
 </resources>
